# podman-gitops

./: .gitignore  README.md  podman-gitops-complete-doc.md  pyproject.toml
examples/: config.toml  main.toml
examples/quadlets/: example.container
scripts/: install.sh
src/: __init__.py  cli.py  main.py
src/core/: __init__.py  app_manager.py  config.py  env_processor.py  git_manager.py  git_operations.py  health_checker.py  logging.py  quadlet_handler.py  rollback.py  scheduler.py  systemd_manager.py
src/metrics/: __init__.py  collector.py  influx.py  prometheus.py
src/notifications/: __init__.py
src/state/: __init__.py  manager.py
tests/: test_state_manager.py
